# court-diary-00

./: README.md
backend/: README.md  pyproject.toml
backend/app/: dependencies.py  main.py  run.py
backend/app/api/: __init__.py
backend/app/auth/: chamber_resolver.py  csrf_token_util.py  deps.py  jwt.py  permissions.py  schemas.py  webhook_auth.py
backend/app/core/: config.py  context.py  load_settings.py  runtime_settings.py
backend/app/dtos/: anonymous_dtos.py  aor_dto.py  billing_dto.py  calendar_dto.py  cases_dto.py  chamber_dto.py  chamber_subscriptions_dto.py  clients_dto.py  collaborations_dto.py  contact_message_dto.py  dashboard_dto.py  home_dtos.py  invitations_dto.py  notification_settings_dto.py  oauth_dtos.py  reports_dto.py  role_permissions_dto.py  roles_dto.py  scheduler_dto.py  send_email_dto.py  suad_dto.py  support_ticket_dto.py  users_dto.py
backend/app/middleware/: exception_handler.py  request_context_middleware.py
backend/app/services/: EmailLinkService.py  anonymous_service.py  aor_service.py  auth_service.py  billing_service.py  calendar_service.py  cases_service.py  chamber_service.py  (+18 more)
backend/data/: 001_create_uuid_v7_function.sql  001_functions_procedures.sql  002_create_uuid_triggers.sql  1_cs_schema_create.sql  2_cs_data_inserts.sql  all.sql  courts.sql  hearings_data.sql
backend/static/: email_template.html  invoice_template.html
backend/tests/: create_curd.py  create_models.py  create_project.txt  create_repository.py  create_ui_constants_context.py  create_ui_defaults_constants.py  table_metadata.py  testmail.py
(+222 files in other folders)
